--- a/src/main/resources/templates/accessDeniedPage.html
+++ b/src/main/resources/templates/accessDeniedPage.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h3>You are not allowed to access this page. Please go to Welcome Page</h3>
-	<a th:href="@{/welcome}">Welcome</a>
+	<a th:href="@{/home}">Welcome</a>
 	<a th:href="@{/logout}">LOGOUT</a>
 </body>
 
